Bug 317214 - Crash accepting kwhiteboard tube
Summary: Crash accepting kwhiteboard tube
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: kded-module (other bugs)
Version First Reported In: git-latest
Platform: Other Linux
: NOR normal
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-03-23 01:40 UTC by David Edmundson
Modified: 2013-03-25 10:07 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Edmundson 2013-03-23 01:40:00 UTC
Thread 1 (Thread 0x7ff42c758780 (LWP 1946)):
[KCrash Handler]
#5  0x00007ff4332965a1 in KSycocaEntry::property(QString const&) const () from /usr/lib/libkdecore.so.5
#6  0x00007ff409694f3c in TubeChannelApprover::onChannelAccepted (this=0x120b970) at /home/david/projects/telepathy/ktp-approver/src/tubechannelapprover.cpp:139
#7  0x00007ff432d66f8f in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#8  0x00007ff432d66f8f in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#9  0x00007ff433af4d05 in KNotification::activate(unsigned int) () from /usr/lib/libkdeui.so.5
#10 0x00007ff433af64f6 in ?? () from /usr/lib/libkdeui.so.5
#11 0x00007ff432d66f8f in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#12 0x00007ff433c0ff4c in ?? () from /usr/lib/libkdeui.so.5
#13 0x00007ff433c10631 in ?? () from /usr/lib/libkdeui.so.5
#14 0x00007ff433c1097b in ?? () from /usr/lib/libkdeui.so.5
#15 0x00007ff4300c8ed3 in ?? () from /usr/lib/x86_64-linux-gnu/libQtDBus.so.4
#16 0x00007ff432d6646e in QObject::event(QEvent*) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#17 0x00007ff4320f8e9c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#18 0x00007ff4320fd30a in QApplication::notify(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#19 0x00007ff433acbad6 in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#20 0x00007ff432d5159e in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#21 0x00007ff432d55421 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#22 0x00007ff432d7fa93 in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#23 0x00007ff42e84fab5 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#24 0x00007ff42e84fde8 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#25 0x00007ff42e84fea4 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#26 0x00007ff432d7fc26 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#27 0x00007ff43219dc1e in ?? () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#28 0x00007ff432d502ef in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#29 0x00007ff432d50578 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#30 0x00007ff432d55738 in QCoreApplication::exec() () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#31 0x00007ff41f86e3f0 in kdemain () from /usr/lib/kde4/libkdeinit/libkdeinit4_kded4.so
#32 0x00000000004084c6 in _start ()


The message was "Incoming tube from David of type unknown"
Comment 1 Daniel Vrátil 2013-03-25 10:07:06 UTC
Git commit 0c4910203bb2bbb0f9842285427a5eed07defc47 by Dan Vrátil.
Committed on 25/03/2013 at 11:06.
Pushed by dvratil into branch 'kde-telepathy-0.6'.

Don't crash when unknown service channel is accepted

When no service .desktop file is found, m_service will be null,
so we crash when the channel is accepted.

REVIEW: 109703
FIXED-IN: 0.6.0

M  +2    -2    src/tubechannelapprover.cpp

http://commits.kde.org/telepathy-approver/0c4910203bb2bbb0f9842285427a5eed07defc47