Don't crash when unknown service channel is accepted

When no service .desktop file is found, m_service will be null,
so we crash when the channel is accepted.

REVIEW: 109703
BUG: 317214
FIXED-IN: 0.6.0